ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # annotations:
  #   #######
  #   THe below may be needed if using AWS Load Balancer Controller directly
  #   alb.ingress.kubernetes.io/target-type: ip
  #   alb.ingress.kubernetes.io/subnets: subnet-0573a0df96e5263b1,subnet-08e9e3661e3e1239b,subnet-0a90d191ff9ff5bb3
  #
  #   kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  #   alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
  #   ####
spec:
  # ingressClassName: alb
  ingressClassName: nginx
  # # If you want / have cert-manager for TLS management
  # tls:
  #   - hosts:
  #       - mytestendpoint.dlaitest.k8s.fdscloud.io
  #     secretName: somethingtobecreatedbycertmanager
  rules:
    - host: $HOST_URL
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
